force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Meal_Period_Violations__c.field-meta.xml
<CustomField>
    <fullName>Meal_Period_Violations__c</fullName>
    <description>List Meal Period Violatons -  See Help Text for selection details</description>
    <inlineHelpText>Selections details:
1) 30-minute off-duty meal period not provided by the end of the 5th hour of work
2) Second 30-minute off-duty meal period not provided when working more than 10 hours
3) Meal period provided but less than 30 minutes</inlineHelpText>
    <label>Meal Period Violations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No 30-minute off-duty meal period</fullName>
            </value>
            <value>
                <fullName>No second 30-minute off-duty meal period</fullName>
            </value>
            <value>
                <fullName>Less than 30 minutes meal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>