force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Minimum_Wage_Violations__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Wage_Violations__c</fullName>
    <description>Suspected Violations of Employer - Minimum Wage Violations</description>
    <label>Minimum Wage Violations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid below minimum wage</fullName>
            </value>
            <value>
                <fullName>Not paid at all for overtime hours</fullName>
            </value>
            <value>
                <fullName>Not paid for all hours, travel &amp; try-out</fullName>
            </value>
            <value>
                <fullName>Paycheck issued with insufficient funds</fullName>
            </value>
            <value>
                <fullName>Asked employee to pay back wages paid</fullName>
            </value>
            <value>
                <fullName>No split shift premium pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>