force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Name_and_Job_Title_of_Who_Pays_Employees__c.field-meta.xml
<CustomField>
    <fullName>Name_and_Job_Title_of_Who_Pays_Employees__c</fullName>
    <description>Who pays Employees? Full Name and Job Title/Positioin</description>
    <inlineHelpText>Who pays Employees? Full Name and Job Title/Positioin</inlineHelpText>
    <label>Name and Job Title of Who Pays Employees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>