force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/No_Lactation_Accommodati__c.field-meta.xml
<CustomField>
    <fullName>No_Lactation_Accommodati__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Suspected Violations of Employer - No Lactation Accommodation</description>
    <label>No Lactation Accommodation</label>
    <type>Checkbox</type>
</CustomField>