force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/No_notice_of_available_sick_leave__c.field-meta.xml
<CustomField>
    <fullName>No_notice_of_available_sick_leave__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No notice of available sick leave on itemized wage statement or separate writing</description>
    <label>No notice of available sick leave</label>
    <type>Checkbox</type>
</CustomField>