force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/No_of_employee_affected_unpaid_overtime__c.field-meta.xml
<CustomField>
    <fullName>No_of_employee_affected_unpaid_overtime__c</fullName>
    <description>Suspected Violations of Employer - Number employees affected by unpaid overtime</description>
    <inlineHelpText>Suspected Violations of Employer - Number employees affected by unpaid overtime</inlineHelpText>
    <label>Estimated number of employees (overtime)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>