force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/No_of_employees_affected_business_expens__c.field-meta.xml
<CustomField>
    <fullName>No_of_employees_affected_business_expens__c</fullName>
    <description>Suspected Violation of Employer - Estimated number of employees affected by business expense</description>
    <inlineHelpText>Suspected Violation of Employer - Estimated number of employees affected by business expense</inlineHelpText>
    <label>Estimated number of employees BusinessEx</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>