force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/No_of_employees_affected_record_keeping__c.field-meta.xml
<CustomField>
    <fullName>No_of_employees_affected_record_keeping__c</fullName>
    <label>Estimated Employees Affected by Record</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>