force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/No_of_employees_affected_rest_break__c.field-meta.xml
<CustomField>
    <fullName>No_of_employees_affected_rest_break__c</fullName>
    <description>Suspected Violation of Employer - Estimated number of employees affected by rest break</description>
    <inlineHelpText>Suspected Violation of Employer - Estimated number of employees affected by rest break</inlineHelpText>
    <label>Estimated number of employees (rest)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>