force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/No_of_employees_minimum_wage__c.field-meta.xml
<CustomField>
    <fullName>No_of_employees_minimum_wage__c</fullName>
    <description>Suspected Violations of Employer - Minimum Wage</description>
    <inlineHelpText>Suspected Violations of Employer - Minimum Wage</inlineHelpText>
    <label>Estimated number of employees (minwage)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>