force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/No_paid_sick_leave__c.field-meta.xml
<CustomField>
    <fullName>No_paid_sick_leave__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Paid sick leave violation - No paid sick leave</description>
    <label>No paid sick leave</label>
    <type>Checkbox</type>
</CustomField>