force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/No_Standard_Scheduled_Meal_Period__c.field-meta.xml
<CustomField>
    <fullName>No_Standard_Scheduled_Meal_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <description>There is no standard scheduled meal period</description>
    <inlineHelpText>There is no standard scheduled meal period</inlineHelpText>
    <label>No Standard Scheduled Meal Period</label>
    <type>Checkbox</type>
</CustomField>