force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Normal_Wednesday_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Normal_Wednesday_End_Time__c</fullName>
    <label>Normal Wednesday End Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>