force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Notice_Filing_Date__c.field-meta.xml
<CustomField>
    <fullName>Notice_Filing_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notice Filing Date</label>
    <type>Date</type>
</CustomField>