force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Occupational_SAFE_HLTH_LC6300_et_seq__c.field-meta.xml
<CustomField>
    <fullName>Occupational_SAFE_HLTH_LC6300_et_seq__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Occupational Safety and Health (Labor Code §§ 6300 et seq.)</description>
    <inlineHelpText>Occupational Safety and Health (Labor Code §§ 6300 et seq.)</inlineHelpText>
    <label>Occupational SAFE HLTH (LC 6300 et seq)</label>
    <type>Checkbox</type>
</CustomField>