force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Other_Languages_Spoken_by_Employees__c.field-meta.xml
<CustomField>
    <fullName>Other_Languages_Spoken_by_Employees__c</fullName>
    <description>Other Languages Spoken by Employees in addition to picklist.</description>
    <inlineHelpText>Other Languages Spoken by Employees in addition to picklist.</inlineHelpText>
    <label>Other Languages Spoken by Employees</label>
    <type>TextArea</type>
</CustomField>