force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Improper_or_Inc_Wage_Statements__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Improper_or_Inc_Wage_Statements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PAGA Violation Improper or Incomplete Wage Statements</description>
    <inlineHelpText>PAGA Violation Improper or Incomplete Wage Statements</inlineHelpText>
    <label>Improper or Incomplete Wage Statements</label>
    <type>Checkbox</type>
</CustomField>