force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Independent_Contractor__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Independent_Contractor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Misclassification [Employee classified as independent contractor]</description>
    <inlineHelpText>Misclassification [Employee classified as independent contractor]</inlineHelpText>
    <label>Classified as Independent Contractor</label>
    <type>Checkbox</type>
</CustomField>