force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Meal_and_Rest_Breaks__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Meal_and_Rest_Breaks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PAGA Meal and Rest Breaks</description>
    <inlineHelpText>PAGA Meal and Rest Breaks</inlineHelpText>
    <label>Meal and Rest Breaks</label>
    <type>Checkbox</type>
</CustomField>