force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_No_Workers_Compensation__c.field-meta.xml
<CustomField>
    <fullName>PAGA_No_Workers_Compensation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PAGA Violation for No Workers' Compensation.</description>
    <inlineHelpText>PAGA Violation for No Workers' Compensation.</inlineHelpText>
    <label>No Workers’ Compensation</label>
    <type>Checkbox</type>
</CustomField>