force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Not_Paid_Wages_Due_on_Termination__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Not_Paid_Wages_Due_on_Termination__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not paid wages due on termination paga</description>
    <inlineHelpText>Not paid wages due on termation paga</inlineHelpText>
    <label>Not Paid Wages Due on Termination</label>
    <type>Checkbox</type>
</CustomField>