force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_One_or_more__c.field-meta.xml
<CustomField>
    <fullName>PAGA_One_or_more__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Includes one or more listed in Labor Code 2699.5- not curable subject to 2699.3(a)</description>
    <inlineHelpText>Includes one or more listed in Labor Code 2699.5- not curable subject to 2699.3(a)</inlineHelpText>
    <label>One or more 2699.5 not curable</label>
    <type>Checkbox</type>
</CustomField>