force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Other_Notice_or_Posting_or_Record__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Other_Notice_or_Posting_or_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Other Notice or Posting or Recordkeeping PAGA Violation</description>
    <inlineHelpText>Other Notice or Posting or Recordkeeping PAGA Violation</inlineHelpText>
    <label>Other Notice or Posting or Recordkeeping</label>
    <type>Checkbox</type>
</CustomField>