force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Overtime__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Overtime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PAGA Overtime Violation</description>
    <inlineHelpText>PAGA Overtime Violation</inlineHelpText>
    <label>Overtime</label>
    <type>Checkbox</type>
</CustomField>