force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_PMNT_Reimbursement_of_Empl_Expenses__c.field-meta.xml
<CustomField>
    <fullName>PAGA_PMNT_Reimbursement_of_Empl_Expenses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PAGAPayment or Reimbursement of Employee Expenses</description>
    <inlineHelpText>PAGA Payment or Reimbursement of Employee Expenses</inlineHelpText>
    <label>PMNT Reimbursement of Empl Expenses</label>
    <type>Checkbox</type>
</CustomField>