force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Retaliation_for_Prot_StatusActivity__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Retaliation_for_Prot_StatusActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PAGA RLLVs Retaliation of Protected Status or activity.</description>
    <inlineHelpText>PAGA RLLVs Retaliation of Protected Status or activity.</inlineHelpText>
    <label>Retaliation for Protected StatusActivity</label>
    <type>Checkbox</type>
</CustomField>