force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Specify_Ages__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Specify_Ages__c</fullName>
    <description>PAGA Specify Ages</description>
    <inlineHelpText>PAGA Specify Ages</inlineHelpText>
    <label>Specify Ages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>