force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Tips_or_Grauities__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Tips_or_Grauities__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PAGA tips or gratuities</description>
    <inlineHelpText>PAGA tips or gratuities</inlineHelpText>
    <label>Tips or Grauities</label>
    <type>Checkbox</type>
</CustomField>