force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Pay_Stub_Violations__c.field-meta.xml
<CustomField>
    <fullName>Pay_Stub_Violations__c</fullName>
    <description>List of Pay Stub Violations - See Help Text for selection details.</description>
    <inlineHelpText>Details for each selections:
1) Paid by check or cash without an itemized wage deduction statement
2) Itemized wage deduction statement provided but not accurate and/or incomplete
3) Itemized wage deduction statement not provided at least semi-monthly</inlineHelpText>
    <label>Pay Stub Violations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid by Cash or No wage statement</fullName>
            </value>
            <value>
                <fullName>Inaccurate wage statement</fullName>
            </value>
            <value>
                <fullName>No statement  at least semi-monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>