force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Piece_rate_pay_Garment__c.field-meta.xml
<CustomField>
    <fullName>Piece_rate_pay_Garment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Garment Manufacturing - Piece rate pay</description>
    <label>Piece rate pay - Garment</label>
    <type>Checkbox</type>
</CustomField>