force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Piece_Rates_Vary_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Piece_Rates_Vary_Explanation__c</fullName>
    <description>If Piece Rates Vary, this field should be filled out.</description>
    <inlineHelpText>If Piece Rates Vary, this field should be filled out.</inlineHelpText>
    <label>Piece Rates Vary Explanation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>