force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Plaintiff_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Occupation__c</fullName>
    <label>Plaintiff Occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>