force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Print_Name__c.field-meta.xml
<CustomField>
    <fullName>Print_Name__c</fullName>
    <label>Print Name</label>
    <type>TextArea</type>
</CustomField>