force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Public_Works__c.field-meta.xml
<CustomField>
    <fullName>Public_Works__c</fullName>
    <description>Did your job involve public works?</description>
    <inlineHelpText>Did your job involve public works?</inlineHelpText>
    <label>Public Works</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>