force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Quota_prevents_compliance_with_meal_peri__c.field-meta.xml
<CustomField>
    <fullName>Quota_prevents_compliance_with_meal_peri__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Warehouse Dist Ctr - Quota prevents compliance with meal period</description>
    <label>Quota prevents compliance with meal peri</label>
    <type>Checkbox</type>
</CustomField>