force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Referring_Office__c.field-meta.xml
<CustomField>
    <fullName>Referring_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When a case is referred by another office (e.g. Wage), this field will track the office the referral is from.</description>
    <inlineHelpText>Office from which the RLLV was referred.</inlineHelpText>
    <label>Referring Office</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reports of Labor Law Violations (Referring Office)</relationshipLabel>
    <relationshipName>Reports_of_Labor_Law_Violations</relationshipName>
    <type>Lookup</type>
</CustomField>