force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Reporting_Party_Email__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Party_Email__c</fullName>
    <description>The email address of the reporting party.</description>
    <inlineHelpText>The email address of the reporting party.</inlineHelpText>
    <label>Reporting Party Email</label>
    <type>Email</type>
</CustomField>