force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Rest_Break_Violations__c.field-meta.xml
<CustomField>
    <fullName>Rest_Break_Violations__c</fullName>
    <description>List of Rest Break Violations - 
See Help Text for selection details.</description>
    <inlineHelpText>Work days:
Between 3.5 hrs &amp; up to 6 hrs/day, not allowed to take a 10-min rest break
Of more than 6 hrs &amp; up to 10 hrs/day, not allowed to take two 10-min rest breaks
Of more than 10 hrs &amp; up to 14 hrs/day, not allowed to take three 10-min rest breaks</inlineHelpText>
    <label>Rest Break Violations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No 10-minute rest break</fullName>
            </value>
            <value>
                <fullName>No two 10-minute rest breaks</fullName>
            </value>
            <value>
                <fullName>No three 10-minute rest breaks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>